--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,10 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 }
 
 img {
@@ -16,6 +20,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 8px;
 }
 
 input {
@@ -24,3 +29,40 @@ input {
   padding: 8px 24px;
   width: 400px;
 }
+
+ul {
+  list-style-type: none;
+  display: flex;
+  gap: 10px;
+  padding: 5px;
+ margin: 0px 3px;
+}
+
+a {
+  text-decoration: none;
+  color: rgb(91, 88, 83);
+  padding: 0;
+  margin: 0;
+}
+
+.header, .footer {
+  display: flex;
+  padding: 10px;
+  /* border: red 3px solid; */
+  min-width: 100vw;
+  justify-content: space-between;
+}
+
+.footer {
+  background-color: #eeeeee;
+
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
